# trifecta_dope

./: .cache_field_ex_off.json  .cache_field_ex_on.json  .coverage  .envrc.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  Makefile  PR_SUMMARY.md  README.md  SECURITY.md  TELEMETRY_AUDIT_SUMMARY.md  agents.md  biome.json  braindope.md  debug_client.py  debug_status.py  llms.txt  mini-rag  output  package.json  pyproject.toml  pyrefly.toml  readme_minirag.md  readme_tf.md  skill.md  wo-start.md
.claude/: context-memory-id  hookify.block-dangerous-commands.local.md  hookify.block-git-stash-destructive.local.md  hookify.block-manual-wo-closure.local.md  hookify.block-session-bloat.local.md  hookify.block-tmux-destructive.local.md  hookify.debug-code-left-in.local.md  hookify.hardcoded-secrets.local.md  hookify.metodo-p1-stringly-typed.local.md  hookify.metodo-p2-non-deterministic.local.md  hookify.metodo-p3-cwd-coupling.local.md  hookify.metodo-p4-concurrency-noise.local.md  hookify.metodo-p5-env-precedence.local.md  hookify.protect-settings-hooks.local.md  hookify.warn-bare-exception.local.md  hookify.warn-broad-exceptions.local.md  hookify.warn-context-echo.local.md  hookify.warn-datetime-z-suffix.local.md  hookify.warn-debug-code.local.md  hookify.warn-execution-intent.local.md  hookify.warn-typing-any.local.md
.claude/agents/: enterprise-planning-architect.md
.claude/commands/: ctx-md-sync.md  wo-finish.md  wo-repair.md  wo-start.md
.claude/context_memory/: index.json
.claude/hookify/: registry.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  security-scan.yml  wo-weekly-gate.yml
.kilocode/rules/: 00-trifecta-cli-first.md  01-plan-first.md
.mini-rag/: config.yaml
.mini-rag/chunks/: 2025-12-29-claude-code-hooks.md__04f492377d3ff8dd.md  2025-12-29-claude-code-hooks.md__0f5eef2e20367d95.md  2025-12-29-claude-code-hooks.md__5dd06cea44a8d844.md  (+2540 more)
.reviewctl/: project-gates.json
.sisyphus/: boulder.json
.zed/: debug.json
ADR/: ADR-001_trifecta_dope.md  ADR-002_legacy_vs_specific_context_files.md  ADR-003_ROUTER_V1.md  ADR-005-ast-cache-roundtrip.md  ADR-006_ctx_directory_conventions.md  ADR-007-graph-code.md
_ctx/: agent.md  agent_trifecta_dope.md  agent_wo-0041.md  aliases.yaml  anchors.yaml  context_pack.json  hookify_violations.jsonl  prime_..md  prime_app.md  prime_trifecta_dope.md  prime_wo-0041.md  session_..md  session_app.md  session_codex-graph-mvp.md  session_trifecta_dope.md  session_wo-0041.md  trifecta_config.json
completions/: trifecta.fish
configs/: aliases.yaml  anchors.yaml
data/: hn_runs.csv  tasks_gaia_lite.json
docs/: CLI_WORKFLOW.md  CONTRACTS.md  DEVELOPMENT.md  ERROR_PROMPTS.md  MIGRATION_v1.1.md  PD_REPORT_CONTRACT.md  PR2_SUMMARY.md  PR_NOTES_ast_cache_fix.md  RELEASE_NOTES_v1.md  SECURITY.md  SKILL_HUB_MANUAL.md  TELEMETRY_EPOCH_20260215.md  TEST_GATES.md  ast_cache_validation_instructions.md  deprecations.yaml  hn_methodology.md  hn_results.md  legacy_manifest.json  manual_wo.md  plan-script.md  query-linter-integration.md  reviewctl-agent-guide.md  reviewctl-quick-reference.md  tech_debt_ast_cache.md  telemetry_concurrency.md  telemetry_event_schema.md  wo_hunt_20260221.md
eval/: field_exercises_v1.yaml
minirag-eval/: README.md  run_bench.sh  summarize_results.py
plans/: analisis_exhaustivo_telemetria_pr1.md
scoop/: README.md  trifecta.json
scripts/: DEPRECATED_ingest_trifecta.py.md  add_legacy_flow_marker.py  agent_harness.sh  agent_harness_fp.sh  analyze_skills_catalog.py  audit_tokens.py  benchmark_runner.py  constants.py  ctx_backlog_validate.py  ctx_handoff_pack.sh  ctx_metrics_report.py  ctx_reconcile_state.py  ctx_scope_lint.py  ctx_status.py  ctx_sync_hook.sh  ctx_verify_run.sh  ctx_verify_wo.py  ctx_wo_bootstrap.py  ctx_wo_dependencies.py  ctx_wo_finish.py  ctx_wo_fmt.py  ctx_wo_gc.py  ctx_wo_lint.py  ctx_wo_preflight.py  ctx_wo_requeue.py  ctx_wo_take.py  demo_pr2.py  demo_sidecar_integration.sh  detailed_telemetry_analysis.py  evaluate_plan.py  export_skills_catalog.py  export_wo_index.py  fix_wo_schema_violations.py  gate_clean_worktree_repro.sh  harness_blackbox.py  helpers.py  ingest_trifecta.py  install_FP.py  install_trifecta_context.py  io_utils.py  (+39 more)
skills/: README.md
src/: __init__.py
telemetry_analysis/: README.md  TELEMETRY_AUDIT_SUMMARY.md  Trifecta_Telemetry_Analysis.ipynb  launch.sh  skill.md
tests/: __init__.py  helpers.py  installer_test.py  test_context_pack.py  test_domain.py  test_plan_use_case.py  test_use_cases.py  test_wo_bootstrap.py  test_wo_orchestration.py
testsprite_tests/: standard_prd.json  test-results-report.md  testsprite_backend_test_plan.json
tmp_plan_test/: t9_3_4_baseline.txt  t9_3_4_baseline_tasks.json  t9_3_5_current.txt  t9_3_5_current_tasks.json  t9_3_6_after.txt  t9_3_6_clamp_delta.json  t9_3_6_observability_metrics.json
tools/: probe_lsp_ready.py
(+1289 files in other folders)
