[project]
name = "trifecta"
version = "0.1.0"
description = "Trifecta documentation pack generator for code segments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pyright==1.1.390",
]

[project.scripts]
trifecta = "src.infrastructure.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "scripts"]
addopts = "--ignore=tests/roadmap"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "roadmap: marks tests for unimplemented features (run with '-m roadmap')",
]

[tool.bandit]
exclude_dirs = ["tests", "scripts/debug", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used in non-test code

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]
