[project]
name = "trifecta"
version = "0.1.0"
description = "Trifecta documentation pack generator for code segments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "jsonschema>=4.0.0",
    "filelock>=3.20.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "pyrefly",
    "pyright==1.1.407",
    "bandit[toml]>=1.7.0",  # Security scanner with TOML config support
    "safety>=2.0.0",  # Dependency vulnerability scanner
    # Type stubs for mypy
    "types-PyYAML>=6.0",
    # Analysis tools (kept in dev for convenience during development)
    "jupyter>=1.0.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "kaleido>=0.2.0",
]
# Production-ready optional group for telemetry analysis
# Install with: uv sync --extra telemetry
telemetry = [
    "jupyter>=1.0.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "kaleido>=0.2.0",
]

[project.scripts]
trifecta = "src.infrastructure.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "typer"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [".", "scripts"]
addopts = "--ignore=tests/roadmap"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "roadmap: marks tests for unimplemented features (run with '-m roadmap')",
]

[tool.pytest.ini_options.env]
TRIFECTA_AST_PERSIST = 1

[dependency-groups]
dev = [
    "pytest-env>=1.2.0",
]
